--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.0-jre'
-
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation 'org.slf4j:slf4j-jdk14:1.7.30'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
