--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.google.guava:guava:28.0-jre'
     implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
     implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
