--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
     implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
+    implementation 'commons-cli:commons-cli:1.4'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
