Added Apache CLI
Also fixed a few issues with file loading in different scenarios, moved
the tests to the right location so gradle would see them and created a
gradle wrapper for easy deployment.  Also added shadowJar to build the
jar file with dependencies.

--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,11 @@
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
-
+    id 'eclipse'
+    id "com.github.johnrengelman.shadow" version "6.0.0"
     // Apply the application plugin to add support for building a CLI application
     id 'application'
+    id 'com.adarshr.test-logger' version '2.1.0'
 }
 
 repositories {
@@ -35,3 +37,8 @@ application {
     // Define the main class for the application
     mainClassName = 'project.reimbursement.App'
 }
+
+shadowJar {
+    classifier = null
+}
+
